<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue_course">

    <Button
        android:id="@+id/button_valider_course"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:onClick="ValideCourse"
        android:text="Valider"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/course_nom3"
        android:layout_width="204dp"
        android:layout_height="44dp"
        android:fontFamily="@font/aladin"
        android:text="@string/participants"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/course_createur"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:fontFamily="sans-serif"
        android:text="@string/cr_ateur"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/course_date"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:fontFamily="sans-serif"
        android:text="@string/date"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/course_distance"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:fontFamily="sans-serif"
        android:text="@string/distance_800m"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />


    <TextView
        android:id="@+id/course_tour"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:fontFamily="sans-serif"
        android:text="@string/nb_de_tours_2"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/course_nom"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:fontFamily="@font/aladin"
        android:text="@string/nom_de_la_course"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/button_start_course"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:onClick="StartCourse"
        android:text="@string/start"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Button
        android:id="@+id/button_restart_course"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:onClick="RestartCourse"
        android:text="Restart"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:fontFamily="@font/alfa_slab_one"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.63" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="345dp"
        android:layout_height="320dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/button_start_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_nom3"
        app:layout_constraintVertical_bias="0.244">

        <TableRow>
            <TextView
                android:id="@+id/participant1"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant1"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant1"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="1"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/participant2"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant2"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="2"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/participant3"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant3"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant3"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="3"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/participant4"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant4"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant4"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="4"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/participant5"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant5"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant5"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="5"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/participant6"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant6"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant6"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="6"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/participant7"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant7"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant7"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="7"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/participant8"
                android:layout_width="200dp"
                android:padding="3dip"
                android:text="@string/participant8"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_participant8"
                android:layout_width="96dp"
                android:layout_height="30dp"
                android:onClick="btnp"
                android:padding="3dip"
                android:tag="8"
                android:text="@string/tour"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_attente"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>